src/objects/Jedi_User__c.object
<CustomObject>
    <fields>
        <fullName>Jedi_Image__c</fullName>
        <formula>IMAGE( Jedi_Level__r.Image_URL__c ,  Jedi_Level__r.Name ,100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jedi Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jedi_Level_Image__c</fullName>
        <formula>Jedi_Level__r.Jedi_Level_Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jedi Level Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jedi_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jedi Level</label>
        <referenceTo>Jedi_Level__c</referenceTo>
        <relationshipLabel>Jedi Users</relationshipLabel>
        <relationshipName>Jedi_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jedi_User_s_Manager__c</fullName>
        <formula>User__r.Manager.FirstName &amp; &apos; &apos; &amp; User__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jedi User&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Points_Given_30_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Points Given: 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <summarizedField>B2JU__c.Points_Granted__c</summarizedField>
        <summaryFilterItems>
            <field>B2JU__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>B2JU__c.Jedi_User__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jedi_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Jedi User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Jedi_Level__c</columns>
        <columns>Points__c</columns>
        <columns>User__c</columns>
        <columns>User_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Trust_Jedi_Approvals_Jedi_User</fullName>
        <filterScope>Queue</filterScope>
        <label>Trust Jedi Approvals</label>
        <queue>Trust_Jedi_Approvals</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Jedi User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jedi Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>